# robot_dog

./: README.md
Hardtware/Model/: 减震器弹簧座.stl  减震器轴.stl  同步轮减速电机座.stl  同步轮大.stl  同步轮小.stl  同步轮支撑.stl  同步轮边框大.stl  同步轮连接器大.stl  同步轮连接器小.stl  机架1.stl  机架2.stl  机械爪FSR传感器上盖.stl  机械爪FSR传感器座.stl  机械爪上颌.stl  机械爪上颌连接器1.stl  机械爪上颌连接器2.stl  机械爪减震机构2.stl  机械爪底座.stl  机械爪电机输出轴.stl  机械爪电机输出轴法兰盘.stl  机械臂三轴电机底座.stl  机械臂三轴输出件1.stl  机械臂三轴输出件2.stl  机械臂二轴碳纤维连接件.stl  机械臂二轴输出连接件.stl  机械臂五轴碳纤维连接座.stl  机械臂五轴输出法兰盘.stl  机械臂五轴输出连接支架.stl  机械臂六轴电机固定支架.stl  机械臂六轴输出法兰盘.stl  (+21 more)
Software/Linux/: CMakeLists.txt  READ_ME
Software/Linux/app/: node.cpp
Software/Linux/include/: struct.h  typedef.h
Software/Linux/include/IntertialUnit/: intertialController.h  virtrualExecuter.h
Software/Linux/include/Tools/: sem.h
Software/Linux/include/cubic_interpolation/: CubicInterpolation.h
Software/Linux/include/debug/: my_debug.h  socket_paint.h
Software/Linux/include/filter/: filter.h
Software/Linux/include/queue/: queue.hpp
Software/Linux/include/remote/: remote.h
Software/Linux/include/robot/: ArmCtrlBase.h  DataProgress.h  DogCtrlBase.h  MatrixCalc.hpp  Robot.h  RobotArm.h  RobotDog.h
Software/Linux/src/IntertialUnit/: intertialController.cpp  virtrualExecuter.cpp
Software/Linux/src/Tools/: sem.cpp
Software/Linux/src/cubic_interpolation/: CubicInterpolation.cpp
Software/Linux/src/debug/: my_debug.cpp  socket_paint.cpp
Software/Linux/src/filter/: filter.cpp
Software/Linux/src/remote/: remote.cpp
Software/Linux/src/robot/: DataProgress.cpp  Robot.cpp  RobotArm.cpp  RobotDog.cpp
(+35 files in other folders)
